Fixed input overflow

--- a/style.css
+++ b/style.css
@@ -125,7 +125,6 @@ input {
   background-color: hsl(185, 42%, 94%);
   border-radius: 10px;
   margin-top: 10px;
-  text-align: right;
   font-size: 1.2rem;
 }
 
